Source/WebCore/replay/CapturingInputCursor.cpp
@@ -37,6 +37,7 @@ namespace WebCore {
 
 CapturingInputCursor::CapturingInputCursor(SegmentedInputStorage& storage)
     : m_storage(storage)
+    , m_withinEventLoopInputExtent(false)
 {
     LOG(WebReplay, "%-30sCreated capture cursor=%p.\n", "[ReplayController]", this);
 }
@@ -69,6 +70,13 @@ NondeterministicInputBase* CapturingInputCursor::uncheckedLoadInput(InputQueue)
     // Can't load inputs from capturing cursor.
     ASSERT_NOT_REACHED();
     return nullptr;
+}
+
+void CapturingInputCursor::setWithinEventLoopInputExtent(bool withinEventLoopInputExtent)
+{
+    // We cannot enter more than one extent at a time, since they represent a single run loop.
+    ASSERT(withinEventLoopInputExtent != m_withinEventLoopInputExtent);
+    m_withinEventLoopInputExtent = withinEventLoopInputExtent;
 }
 
 }; // namespace WebCore
